# vb6-discord-rich-presence

./: CMakeLists.txt  exports.def  license.txt  readme.md
code/: main.cpp  main.hpp  types.hpp
test/: prjTest.vbp
tests/: modMain.bas
